# aws-k8s

./: .gitignore  README.md  provision-cluster.py  pyproject.toml  user-data-main.sh  user-data-worker.sh
src/aws_k8s/: __init__.py  __main__.py
src/aws_k8s/user_data/: user-data-main.sh  user-data-worker.sh
